# Game

./: .gitignore  CMakeLists.txt  features to implement later.txt  notes.txt  some usefull stuff to read later.txt
3d_party/Include/glad/: glad.h
3d_party/Include/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
3d_party/Libs/: assimp-vc142-mtd.lib  glad.c  glfw3.lib
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  component.h  game_object.cpp  game_object.h  system.h  systems_holder.cpp  systems_holder.h  window_ctrl.cpp  window_ctrl.h
engine/engine_math/: CMakeLists.txt  vector2.h  vector3.h
engine/player_controls/: CMakeLists.txt  input_control_system.cpp  input_control_system.h  player_controls_component.h
engine/relations/: CMakeLists.txt  hierarchy_component.cpp  hierarchy_component.h
engine/render/: CMakeLists.txt
engine/render/core/: CMakeLists.txt  Model.cpp  Model.h  constants.h  framebuffers.cpp  framebuffers.h  g_buffer_shader_component.h  graphics_ctrl.h  lighting_shader_component.h  primitives.h  render_system.cpp  render_system.h  shader_component.h  shaders_ctrl.cpp  shaders_ctrl.h  shaders_manager.h  textures_ctrl.cpp  textures_ctrl.h  vertices_array.h  view_point_component.h
engine/render/core/light/: light_direction_component.h  light_emitter_component.h  spot_light_component.h
engine/render/core/model/: material_component.h
engine/render/core/shadows/: directional_shadow_map_component.cpp  directional_shadow_map_component.h  omnidir_shadow_map_component.cpp  omnidir_shadow_map_component.h  omnidir_shadow_map_shader_component.h  shadow_map_component.cpp  shadow_map_component.h  shadow_map_generation_system.cpp  shadow_map_generation_system.h  shadow_map_shader_component.h
engine/render/open_gl/: CMakeLists.txt  renderer.cpp  renderer.h
engine/render/open_gl/model/: model.cpp  model.h  model_component.h  model_loader.cpp  model_loader.h  vao_component.h
engine/render/open_gl/shaders/: deferred_lighting_shader.cpp  deferred_lighting_shader.h  deffered_lighting_shader.cpp  omnidir_shadow_map_shader.h  open_gl_shader.cpp  open_gl_shader.h  open_gl_shadow_map_shader.cpp  open_gl_shadow_map_shader.h  open_gl_solid_object_shader.cpp  open_gl_solid_object_shader.h  pbr_shader.cpp  pbr_shader.h  shader_base.h  shader_component.h  shader_utils.cpp  shader_utils.h  solid_object_shader.h  utils.h
engine/render/utils/: CMakeLists.txt  render_utils.cpp  render_utils.h
engine/transform/: CMakeLists.txt  movement_request_component.h  movement_system.cpp  movement_system.h  position_component.cpp  position_component.h  rotation_component.h  rotation_request_component.h  rotation_system.cpp  rotation_system.h  scale_component.h  transform_utils.h  view_point_component.h
engine/utils/: CMakeLists.txt  engine_constants.h  events.h  game_object_factory.cpp  game_object_factory.h
executable/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt  GameCtrl.cpp  GameCtrl.h
resources/models/troll/: troll.mtl
resources/shaders/: background.vs  bloom.fs  bloom.vs  brick.fs  brick.vs  deferred_lighting.fs  deferred_lighting.vs  equirect_to_cubemap.fs  equirect_to_cubemap.vs  gShader.vs  g_buffer_solid.fs  g_buffer_solid.vs  hdr.fs  hdr.vs  highlight.fs  light.vs  omnidir_shadow_map.fs  omnidir_shadow_map.gs  pbr.fs  pbr.vs  shadow_map.fs  solib object backup.vs  solidObject — копия (2).fs  solidObject — копия (2).vs  solidObject — копия (3).fs  solidObject — копия (3).vs  solidObject — копия (4).fs  solidObject — копия (4).vs  solidObject — копия.fs  solidObject — копия.vs  solidObject.fs  solidObject.vs  test1.fs  test1.vs
resources/shaders/backup with transforming vectors to a tangent space/: solidObject.fs  solidObject.vs
