CMAKE_MINIMUM_REQUIRED(VERSION 3.20.2)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
PROJECT(TheGame)
set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT "TheGame" )
include_directories(${PROJECT_SOURCE_DIR}/)
include_directories(${PROJECT_SOURCE_DIR}/3d_party/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3d_party/libs)
ADD_SUBDIRECTORY(executable)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(game)
